--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ h1, h2, h3 {
   border: 1px solid #00e5ff;
   color: #00e5ff;
 }
-buy {
+.buy {
   border: 1px solid #00e5ff;
   color: #00e5ff;
 
